export default ['small', 'medium', 'large'];
