export default [
  {
    id: 'pepperoni',
    name: 'Pepperoni',
    toppings: ['peperroni'],
    image: 'https://i.ibb.co/DDWFGLX/pepperoni.png',
  },
  {
    id: 'margherita',
    name: 'Margherita',
    toppings: ['basil', 'mozzarella'],
    image: 'https://i.ibb.co/DtVP43f/margherita.png',
  },
  {
    id: 'supreme',
    name: 'Supreme',
    toppings: ['peperroni', 'sausage', 'bell peppers', 'onions', 'olives'],
    image: 'https://i.ibb.co/0yVfb1W/supreme.png',
  },
  {
    id: 'meat_lovers',
    name: 'Meat Lovers',
    toppings: ['bacon', 'ham', 'pepperoni', 'sausage'],
    image: 'https://i.ibb.co/m8r8ZgP/meat-lovers.png',
  },
];
